--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
             <div class="opcao">
                 <ion-icon name="home"></ion-icon>
-                <a href="https://italowillian.github.io/Cardapio-principal/">Inicio</a>
+                <a href="https://lek3.github.io/cardapio/">Inicio</a>
             </div>
         </section>
         <div class="header">
